--- a/index.html
+++ b/index.html
@@ -520,11 +520,12 @@
       Vitrien stelt bestaand werk tentoon. Hiervoor deden we een open call waarna onze jury een selectie maakte van een uiteenlopende mix van disciplines en kunstenaars.
     </p>
 
-    <p data-lang-nl="Volgend jaar jouw werk in de vitrien? Hou onze socials in het oog voor nieuwe open calls — volg ons op <a href='https://www.instagram.com/vitrien_leuven/' target='_blank' rel='noopener'>Instagram</a>."
-       data-lang-en="Want your work in next year’s Vitrien? Keep an eye on our socials for new open calls — follow us on <a href='https://www.instagram.com/vitrien_leuven/' target='_blank' rel='noopener'>Instagram</a>.">
-      Volgend jaar jouw werk in de vitrien? Hou onze socials in het oog voor nieuwe open calls — volg ons op
-      <a href="https://www.instagram.com/vitrien_leuven/" target="_blank" rel="noopener">Instagram</a>.
-    </p>
+   <p>
+  <span data-lang-nl="Volgend jaar jouw werk in de vitrien? Hou onze socials in het oog voor nieuwe open calls — volg ons op"></span>
+  <span data-lang-en="Want your work in next year’s Vitrien? Keep an eye on our socials for new open calls — follow us on"></span>
+  <a href="https://www.instagram.com/vitrien_leuven/" target="_blank" rel="noopener">Instagram</a>.
+</p>
+
   </div>
 </section>
 
