--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
   ================================ -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Gepruts met pixels door Judith Caeyers & Thomas De Paepe </div>
+      <div>© <span id="year"></span> Webdesign door Judith Caeyers & Thomas De Paepe </div>
       <a href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
