--- a/paginas/team.html
+++ b/paginas/team.html
@@ -124,7 +124,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Gepruts met pixels door Judith Caeyers &amp; Thomas De Paepe</div>
+      <div>© <span id="year"></span> Webdesign door Judith Caeyers & Thomas De Paepe </div>
       <a href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
