--- a/paginas/artists/Nora.html
+++ b/paginas/artists/Nora.html
@@ -120,10 +120,10 @@
   </main>
 
   <!-- FOOTER -->
-  <footer>
+   <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Vitrien — Leuven</div>
-      <a class="mono-link" href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
+      <div>© <span id="year"></span> Webdesign door Judith Caeyers & Thomas De Paepe </div>
+      <a href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
 
