--- a/paginas/artists/Jente.html
+++ b/paginas/artists/Jente.html
@@ -117,6 +117,15 @@
           <figure class="module">
             <img src="../../assets/img/artists/jente5.jpg" alt="Werk — Jente Waerzeggers">
           </figure>
+                    <figure class="module">
+            <img src="../../assets/img/artists/jente6.jpg" alt="Werk — Jente Waerzeggers">
+          </figure>
+                    <figure class="module">
+            <img src="../../assets/img/artists/jente7.jpg" alt="Werk — Jente Waerzeggers">
+          </figure>
+                    <figure class="module">
+            <img src="../../assets/img/artists/jente8.jpg" alt="Werk — Jente Waerzeggers">
+          </figure>
         </div>
       </div>
     </section>
