--- a/paginas/artists/Nora.html
+++ b/paginas/artists/Nora.html
@@ -122,7 +122,7 @@
   <!-- FOOTER -->
    <footer>
     <div class="footer-inner">
-      <div>© <span id="year"></span> Webdesign door Judith Caeyers & Thomas De Paepe </div>
+      <div>© Webdesign door Judith Caeyers & Thomas De Paepe </div>
       <a href="#top" data-lang-nl="Naar boven" data-lang-en="Back to top">Naar boven</a>
     </div>
   </footer>
