--- a/paginas/artists/Jente.html
+++ b/paginas/artists/Jente.html
@@ -103,28 +103,28 @@
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
           <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente1.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente1.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente2.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente2.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente3.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente3.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente4.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente4.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
           <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente5.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente5.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
                     <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente6.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente6.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
                     <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente7.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente7.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
                     <figure class="module">
-            <img src="../../assets/img/artists/Jente/jente8.jpg" alt="Werk — Jente Waerzeggers">
+            <img src="../../assets/img/artists/Jente/jente8.jpeg" alt="Werk — Jente Waerzeggers">
           </figure>
         </div>
       </div>
