--- a/paginas/artists/Alice.html
+++ b/paginas/artists/Alice.html
@@ -113,15 +113,15 @@
       <div class="container">
         <div class="meta" data-lang-nl="Werk" data-lang-en="Work">Werk</div>
         <div class="grid gallery">
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice1.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice2.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice3.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice4.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice5.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice6.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice7.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice8.jpeg" alt="Werk — Alice Leens"></figure>
-          <figure class="module"><img src="../../assets/img/artists/Alice/Alice9.jpeg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice1.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice2.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice3.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice4.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice5.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice6.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice7.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice8.jpg" alt="Werk — Alice Leens"></figure>
+          <figure class="module"><img src="../../assets/img/artists/Alice/Alice9.jpg" alt="Werk — Alice Leens"></figure>
         </div>
       </div>
     </section>
