--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
           </article>
         
           <article class="location-card">
-            <h3 class="location-name" data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Locatie volgt</h3>
-            <p class="location-address" data-lang-nl="Adres volgt" data-lang-en="Address tba">Adres volgt</p>
+            <h3 class="location-name" data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Delen Bank</h3>
+            <p class="location-address" data-lang-nl="Adres volgt" data-lang-en="Address tba">Bondgenotenlaan 140</p>
             <p class="location-city">3000 Leuven</p>
-            <p><span class="mono-link" style="opacity:.6">Website</span></p>
+            <p><a class="mono-link" href="https://www.delen.bank/nl-be/" target="_blank" rel="noopener">Website</a></p>
           </article>
         </div>
       </div>
@@ -409,18 +409,6 @@
         </figcaption>
       </figure>
 
-      <!-- Alice -->
-      <figure class="module">
-        <img src="assets/img/artists/Alice.jpg" alt="Werk van Alice Leens">
-        <figcaption class="caption">
-          <strong>Alice Leens</strong><br>
-          <span data-lang-nl="Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen."
-                data-lang-en="Reveals the inner structure of yarn and textiles. From line to volume, where craft and symbolism converge.">
-            Ontsluit de innerlijke structuur van garen en textiel. Van lijn naar volume, waar ambacht en symboliek samenkomen.
-          </span>
-          <a class="mono-link" href="paginas/artists/Alice.html" data-lang-nl="Lees meer" data-lang-en="Read more">Lees meer</a>
-        </figcaption>
-      </figure>
 
       <!-- Camille -->
       <figure class="module">
