--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
           </article>
         
           <article class="location-card">
-            <h3 class="location-name" data-lang-nl="Locatie volgt" data-lang-en="Venue tba">Delen Bank</h3>
-            <p class="location-address" data-lang-nl="Adres volgt" data-lang-en="Address tba">Bondgenotenlaan 140</p>
+            <h3 class="location-name" data-lang-nl="Delen Bank" data-lang-en="Delen Bank">Delen Bank</h3>
+            <p class="location-address" data-lang-nl="Bondgenotenlaan 140" data-lang-en="Bondgenotenlaan 140">Bondgenotenlaan 140</p>
             <p class="location-city">3000 Leuven</p>
             <p><a class="mono-link" href="https://www.delen.bank/nl-be/" target="_blank" rel="noopener">Website</a></p>
           </article>
