--- a/paginas/artists/Jason.html
+++ b/paginas/artists/Jason.html
@@ -91,7 +91,10 @@
           </p>
           <div class="meta" style="margin-top:20px" data-lang-nl="Praktisch" data-lang-en="Practical">Praktisch</div>
           <p>
-            Website: <a class="mono-link" href="#" target="_blank" rel="noopener">https://studio.slabbynck.be/</a><br>
+            Website: <a class="mono-link" href="https://studio.slabbynck.be/" target="_blank" rel="noopener noreferrer">
+  https://studio.slabbynck.be/
+</a>
+
             Contact: <a class="mono-link" href="mailto:jason@mxmxm.be">jason@mxmxm.be</a>
           </p>
         </article>
