--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     <div class="program-block">
       <time>15:50</time>
       <div>
-        <strong data-lang-nl="Performance — Niels Poiz" data-lang-en="Performance — Niels Poiz">
-          Performance — Niels Poiz
+        <strong data-lang-nl="Interventie Arty Party" data-lang-en="Intervention Arty Party">
+          Interventie Arty Party
         </strong>
       </div>
     </div>
@@ -256,8 +256,8 @@
     <div class="program-block">
       <time>19:50</time>
       <div>
-        <strong data-lang-nl="Performance — Nog aan te kondigen" data-lang-en="Performance — Artist to be announced">
-          Performance — Nog aan te kondigen
+        <strong data-lang-nl="Luistersessie - Camille Lemille" data-lang-en="Listening session - Camille Lemille">
+          Luistersessie - Camille Lemille
         </strong>
       </div>
     </div>
